profilelist1exp/unpackaged/objects/Idea_Intake__c.object
<CustomObject>
    <fields>
        <fullName>Under_Review_Duration__c</fullName>
        <formula>IF( ISPICKVAL(Status__c,&apos;Under Review&apos;),
IF
(
OR(On_Under_Review_Total_Days__c &lt;&gt; null,On_Under_Review_Total_Days__c &lt;&gt; 0),
(TODAY() - DATEVALUE(On_Under_Review_DurartionDate__c)) + On_Under_Review_Total_Days__c,
TODAY() - DATEVALUE(On_Under_Review_DurartionDate__c)
),
On_Under_Review_Total_Days__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Under Review Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workstream__c</fullName>
        <label>Workstream</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Other Initiative</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>SFDC Reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chatter_message__c</fullName>
        <defaultValue>TRIM(&quot;Add attachments or comments to your idea via the chatter feed, after saving the record.&quot;)</defaultValue>
        <label>.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Idea Intake</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Record_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Original_Requester__c</columns>
        <columns>Workstream__c</columns>
        <columns>Requesting_organization__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Functional_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Development,New,On Hold,Pending Development,Planning,Ready to Deploy,Undefined,Under Review</value>
        </filters>
        <filters>
            <field>Requesting_organization__c</field>
            <operation>equals</operation>
            <value>Channel</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Channel_Idea_Intake</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Workstream__c</columns>
        <columns>Requesting_organization__c</columns>
        <columns>Original_Requester__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workstream__c</field>
            <operation>equals</operation>
            <value>Channel</value>
        </filters>
        <filters>
            <field>Requesting_organization__c</field>
            <operation>contains</operation>
            <value>Channel</value>
        </filters>
        <label>Workstream - Channel</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Channel_Idea_Intake_Idea_Intake</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Original_Requester__c</columns>
        <columns>TFS_ID__c</columns>
        <columns>PMO_CR__c</columns>
        <columns>Launch_date__c</columns>
        <columns>Workstream__c</columns>
        <columns>Requesting_organization__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Idea Queue - Channel</label>
        <language>en_US</language>
        <queue>Channel_Idea_Intake</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Idea_Queue_Marketing_Roadmap</fullName>
        <columns>Record_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Original_Requester__c</columns>
        <columns>TFS_ID__c</columns>
        <columns>BR__c</columns>
        <columns>Targeted_Release__c</columns>
        <columns>Workstream__c</columns>
        <columns>Requesting_organization__c</columns>
        <columns>Researcher_Moderator__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Implemented,Resolved,Rejected</value>
        </filters>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Road Map</value>
        </filters>
        <label>Idea Queue - Marketing (Roadmap)</label>
        <language>en_US</language>
        <queue>Marketing_Idea_Intake</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_Idea_Intake</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Workstream__c</columns>
        <columns>Requesting_organization__c</columns>
        <columns>Targeted_Release__c</columns>
        <columns>Original_Requester__c</columns>
        <columns>Researcher_Moderator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workstream__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </filters>
        <filters>
            <field>Requesting_organization__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </filters>
        <label>Workstream - Marketing</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_Idea_Intake_Idea_Intake</fullName>
        <columns>Record_ID__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Original_Requester__c</columns>
        <columns>TFS_ID__c</columns>
        <columns>Targeted_Release__c</columns>
        <columns>Workstream__c</columns>
        <columns>Requesting_organization__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Merged,Implemented,Resolved,Rejected</value>
        </filters>
        <label>Idea Queue - Marketing</label>
        <language>en_GB</language>
        <queue>Marketing_Idea_Intake</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_Review</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6) AND 7 AND 8 AND 9</booleanFilter>
        <columns>Record_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Original_Requester__c</columns>
        <columns>TFS_ID__c</columns>
        <columns>Targeted_Release__c</columns>
        <columns>Researcher_Moderator__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Development</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>GKau</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>rvitt</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>NLee</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>RMari</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>OCid</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>viper</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>fap</value>
        </filters>
        <filters>
            <field>Workstream__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </filters>
        <label>Marketing Ideas Pending Development</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Nat_Test</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Original_Requester__c</field>
            <operation>contains</operation>
            <value>Nathaniel,Timothy</value>
        </filters>
        <label>Nat Test</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Idea_Intake</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Original_Requester__c</columns>
        <columns>Requested_on_behalf_of__c</columns>
        <columns>Requesting_organization__c</columns>
        <columns>Workstream__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Idea_Intake__c.Idea</value>
        </filters>
        <label>New Idea Intake</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ramesh</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 9) AND 6 AND 7 AND 8</booleanFilter>
        <columns>Record_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Original_Requester__c</columns>
        <columns>TFS_ID__c</columns>
        <columns>Targeted_Release__c</columns>
        <columns>Researcher_Moderator__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Pending Development,Merged,Implemented,Resolved,Rejected</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>GKau</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>rvitt</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>NLee</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>RMari</value>
        </filters>
        <filters>
            <field>Workstream__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>viper</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>fap</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>OCid</value>
        </filters>
        <label>Marketing Review</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Reporting_Idea_Intake_Idea_Intake</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Original_Requester__c</columns>
        <columns>TFS_ID__c</columns>
        <columns>PMO_CR__c</columns>
        <columns>Launch_date__c</columns>
        <columns>Workstream__c</columns>
        <columns>Requesting_organization__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Idea Queue - Reporting</label>
        <language>en_US</language>
        <queue>Reporting_Idea_Intake</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Reporting_Requests</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Workstream__c</columns>
        <columns>Requesting_organization__c</columns>
        <columns>Original_Requester__c</columns>
        <columns>Researcher_Moderator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workstream__c</field>
            <operation>equals</operation>
            <value>SFDC Reporting</value>
        </filters>
        <label>Workstream - Reporting</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SFDC_Direct_Idea_Intake_Idea_Intake</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Original_Requester__c</columns>
        <columns>TFS_ID__c</columns>
        <columns>PMO_CR__c</columns>
        <columns>Launch_date__c</columns>
        <columns>Workstream__c</columns>
        <columns>Requesting_organization__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Idea Queue - SFDC Direct</label>
        <language>en_US</language>
        <queue>SFDC_Direct_Idea_Intake</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SFDC_Reporting1</fullName>
        <columns>Record_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Workstream__c</columns>
        <columns>Requesting_organization__c</columns>
        <columns>Researcher_Moderator__c</columns>
        <columns>Original_Requester__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workstream__c</field>
            <operation>equals</operation>
            <value>SFDC Reporting</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Resolved</value>
        </filters>
        <label>SFDC Reporting</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Seasonal</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Functional_Area__c</columns>
        <columns>Feature_Category__c</columns>
        <columns>SFDC_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Idea_Intake__c.Seasonal</value>
        </filters>
        <label>Seasonal</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Idea Intake</pluralLabel>
    <recordTypes>
        <fullName>Idea</fullName>
        <active>true</active>
        <description>Record type to capture user ideas for SFDC before they are turned into change requests.</description>
        <label>Idea</label>
    </recordTypes>
    <recordTypes>
        <fullName>Release</fullName>
        <active>true</active>
        <description>Parent master record for grouping idea records into a logical set like a release or related ideas.</description>
        <label>Release</label>
    </recordTypes>
    <recordTypes>
        <fullName>Seasonal</fullName>
        <active>true</active>
        <description>Records for the SFDC seasonal release items.</description>
        <label>Seasonal</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Force_New_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
RecordType.Name == &apos;Idea&apos;,
ISNEW(), 
NOT(ISPICKVAL(Status__c, &quot;New&quot;)) 
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please choose New for new Idea</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Fields</fullName>
        <active>false</active>
        <errorConditionFormula>AND(RecordType.DeveloperName == &apos;Idea&apos;,IF(ISBLANK(TEXT( MoSCoW_Value__c)),true,
   IF(ISBLANK(Regions_Impacted__c),true,   
     IF(ISBLANK(TEXT( Requesting_organization__c)),true,   
        IF(ISBLANK(TEXT( Requesting_region__c )),true,
           IF(LEN( Business_Challenge__c)== 0,true,
   IF(LEN( Business_Justification__c ) == 0,true,
		IF(LEN( Business_Objective__c ) == 0,true,false)
	 )
)
		  )
		)
	  )
   ))</errorConditionFormula>
        <errorMessage>The following fields are mandatory : MoSCoW Value, Regions Impacted, Requesting Organization , Requesting Region, Business Challenge, Business Justification &amp; Business Objective</errorMessage>
    </validationRules>
</CustomObject>